Add google auth

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 GITHUB_ID=8602604d030f736d2437
 GITHUB_SECRET=43c07a701523d53151dc0da0fb6a598f3a5eba34
+
+
+GOOGLE_CLIENT_ID=775210567987-5etkfo03n4l22pidv7cci7b3k8mj4tsk.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
