--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+NEXTAUTH_SECRET=ASDF
+NEXTAUTH_URL=http://localhost:3000
+
+
 GITHUB_ID=8602604d030f736d2437
 GITHUB_SECRET=43c07a701523d53151dc0da0fb6a598f3a5eba34
 
